--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,17 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -60,8 +71,15 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
 
     // LiveData and ViewModel
-    implementation 'android.arch.lifecycle:runtime:1.1.1'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:runtime:1.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.0.0-alpha9-1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha9-1'
+
+    // Room
+    implementation 'android.arch.persistence.room:runtime:1.0.0-alpha9-1'
+    implementation 'android.arch.persistence.room:compiler:1.0.0-alpha9-1'
+    implementation "android.arch.persistence.room:compiler:1.0.0-alpha9-1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha9-1"
 
     // Paging
     implementation 'android.arch.paging:runtime:1.0.0-alpha1'
@@ -70,12 +88,6 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     kapt 'com.jakewharton:butterknife-compiler:8.8.1'
-
-    // Room
-    implementation 'android.arch.persistence.room:runtime:1.0.0'
-    implementation 'android.arch.persistence.room:compiler:1.0.0'
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    kapt "android.arch.persistence.room:compiler:1.0.0"
 
     // Picasso & Palette
     implementation 'com.github.florent37:picassopalette:2.0.0'
